--- a/superset/assets/stylesheets/less/variables.less
+++ b/superset/assets/stylesheets/less/variables.less
@@ -24,8 +24,8 @@
 /* component styles. This will allow us to more easily adjust theming   */
 /************************************************************************/
 
-@primary-color: #00a699;
-@indicator-color: #44c0ff;
+@primary-color: #662d90;
+@indicator-color: #f33990;
 
 @almost-black: #263238;
 @gray-dark: #484848;
